<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:gravity="center"
    android:background="@drawable/tips_bg">
  
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:background="@drawable/title_bar_bg">
    <Button
	android:id="@+id/kn_return_button"
	android:layout_width="50dp"
	android:layout_height="50dp"
	android:background="@drawable/back_green"/>
    <TextView
	android:id="@+id/tips_title_text"
	android:layout_centerInParent="true"
	android:layout_alignParentTop="true"
	style="@style/tips_title_text_style"
	android:text="@string/tips_title_bar_text"/>
  </RelativeLayout>
  
  <ScrollView
      android:layout_weight="1"  
      android:layout_width="fill_parent"  
      android:layout_height="wrap_content"  
      android:background="#FFFFFF"  
      android:id="@+id/scroll"  >  
    <LinearLayout                       
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="vertical"  >   
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_0"
	  android:text="@string/know_title_0"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:scaleType="fitXY"
	  android:layout_marginTop="5dp"/>
      <TextView    
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_0"
	  android:text="@string/know_content_0"
	  android:layout_marginLeft="15dp"
	  android:layout_marginTop="10dp" />
      <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="10dp"
	  android:layout_marginRight="10dp"
	  android:src="@drawable/tips_line"
	  android:scaleType="fitXY"
	  android:layout_marginTop="15dp"/>
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_1"
	  android:text="@string/know_title_1"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="5dp"
	  android:scaleType="fitXY"/>
      <TextView
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_1"
	  android:text="@string/know_content_1"
	  android:layout_marginTop="10dp"
	  android:layout_marginLeft="15dp"/>
      <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="10dp"
	  android:layout_marginRight="10dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="15dp"
	  android:scaleType="fitXY"/>
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_2"
	  android:text="@string/know_title_2"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="5dp"
	  android:scaleType="fitXY"/>
      <TextView
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_2"
	  android:text="@string/know_content_2"
	  android:layout_marginTop="10dp"
	  android:layout_marginLeft="15dp"/>
      <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="2dp"
	  android:layout_marginLeft="10dp"
	  android:layout_marginRight="10dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="15dp"
	  android:scaleType="fitXY"/>
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_3"
	  android:text="@string/know_title_3"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="5dp"
	  android:scaleType="fitXY"/>
      <TextView
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_4"
	  android:text="@string/know_content_4"
	  android:layout_marginTop="10dp"
	  android:layout_marginLeft="15dp"/>
      <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="10dp"
	  android:layout_marginRight="10dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="15dp"
	  android:scaleType="fitXY"/>
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_5"
	  android:text="@string/know_title_5"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="5dp"
	  android:scaleType="fitXY"/>
      <TextView
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_5"
	  android:text="@string/know_content_5"
	  android:layout_marginTop="10dp"
	  android:layout_marginLeft="15dp"/>
      <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="10dp"
	  android:layout_marginRight="10dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="15dp"
	  android:scaleType="fitXY"/>
      <TextView    
	  style="@style/know_title_style"
	  android:id="@+id/kn_tl_6"
	  android:text="@string/know_title_6"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="15dp"/>
       <ImageView
	  android:layout_width="fill_parent"
	  android:layout_height="1dp"
	  android:layout_marginLeft="15dp"
	  android:layout_marginRight="15dp"
	  android:src="@drawable/tips_line"
	  android:layout_marginTop="5dp"
	  android:scaleType="fitXY"/>
      <TextView
	  style="@style/know_content_style"
	  android:id="@+id/kn_ct_6"
	  android:text="@string/know_content_6"
	  android:layout_marginTop="10dp"
	  android:layout_marginLeft="15dp"/>
    </LinearLayout>  
  </ScrollView>
</LinearLayout>
